--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,8 +23,12 @@ set-option -g status-attr dim
 
 # Show host name and IP address on left side of status bar
 set -g status-left-length 70
-set -g status-left "#[fg=brightred]#(curl icanhazip.com) #[fg=green]|"
- 
+#set -g status-left "#[fg=brightred]#(curl icanhazip.com) #[fg=green]|"
+set -g status-left "#[fg=brightred]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0: \" $2}') #[fg=green]| "
+
+#[fg=brightred]#(ifconfig en0 | grep 'inet ' | awk '{print \"wlan0: \" $2}')
+
+
 # Define right statusbar lenght
 set -g status-right-length 60
 # Show value of logged on users, how much RAM is free and how much HDD space are used in /var.
